JPA annotations mini exercise complete

--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,6 +8,7 @@
 <div>
     <h1 th:text="${newPost.title}"></h1>
     <p th:text="${newPost.body}"></p>
+<!--    <p th:text="${onePost}"></p>-->
 </div>
 
 
