put in bulma framework for design

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,6 +5,7 @@
     <title>Login</title>
 </head>
 <body>
+<h1>Login, NERD</h1>
 <form action="/login" method="post">
     <input type="text" name="username" id="username" class="field" />
     <input type="text" name="password" id="password" class="field" />
