--- a/src/main/resources/templates/posts/update.html
+++ b/src/main/resources/templates/posts/update.html
@@ -2,16 +2,20 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <div th:insert="/partials/scripts.html :: bulma"></div>
     <title>Update Post</title>
 </head>
 <body>
 <form action="/posts/update" method="post">
+    <input type="hidden" name="id" id="id" th:value="${id}">
+
+
     <label for="title">Title</label>
     <input type="text" name="title" id="title" th:value="${title}">
 
     <label for="body">Body</label>
-    <input type="text" name="body" id="body" th:value="${body}">
-    <button type="submit">Update</button>
+    <textarea type="text" name="body" id="body" th:value="${body}"></textarea>
+    <button type="submit">UPDATE</button>
 </form>
 
 </body>
