--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -13,7 +13,7 @@
     <div class="tile is-ancestor">
         <div class="tile is-parent">
             <div class="box">
-                <div class="column is-half">
+                <div class="column">
                     <article class="tile is-child box">
                         <h1 class="title" th:text="${post.title}"></h1>
                         <p class="content" th:text="${post.body}"></p>
@@ -52,6 +52,9 @@
                             </div>
                         </nav>
                         <hr>
+                        <form th:action="@{'/posts/' + ${post.id} + '/history'}" method="POST">
+                            <button>get the details</button>
+                        </form>
                         <form th:action="@{'/posts/' + ${post.id} + '/delete'}"
                               method="POST">
                             <button class="button is-small is-danger is-outlined"><span class="icon is-small"><i class="fas fa-times"></i></span></button>
