--- a/src/main/resources/templates/posts/history.html
+++ b/src/main/resources/templates/posts/history.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <h1> testtttt </h1>
-    <h1 th:text="${newPost}"></h1>
+    <h1 th:text="${post.postDetail.historyOfPost}"></h1>
     <!--    <p th:text="${onePost}"></p>-->
 
 </div>
