--- a/src/main/resources/templates/posts/history.html
+++ b/src/main/resources/templates/posts/history.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <div>
-    <h1> testtttt </h1>
-    <h1 th:text="${post.postDetail.historyOfPost}"></h1>
-    <!--    <p th:text="${onePost}"></p>-->
+
+<!--    <div th:each="post : ${post.postDetails.historyOfPost}">-->
+<!--        <p th:text="${}"></p>-->
+<!--    </div>-->
+
+    <h1 th:text="${post.postDetails.historyOfPost}"></h1>
 
 </div>
 
