--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Show</title>
 </head>
 <body>
-<div>
-    <h1 th:text="${newPost.title}"></h1>
-    <p th:text="${newPost.body}"></p>
-<!--    <p th:text="${onePost}"></p>-->
+<!--<main class="container">-->
+<!--   <span th:text="${post.title}"></span>-->
+<!--    posted by <span th:text="${post.user.email}"></span>-->
+<!--    <h1 th:text="${post.body}"></h1>-->
+
+<!--</main>-->
+<!--<div th:each="post : ${posts}">-->
+<!--    <h1 class="title" th:text="${post.title}"></h1>-->
+<!--    <p class="content" th:text="${post.body}"></p>-->
+<!--    <p class="user" th:text="${post.user.email}"></p>-->
+<!--</div>-->
+
+<!--<p><span th:text="${post.user.email}"></span></p>-->
+<!--<h1 th:text="${post.title}"></h1>-->
+<!--<div th:each="image : ${post.images}">-->
+<!--    <img th:src="${image.url}"/>-->
+
+<!--</div>-->
+<div th:each="post : ${post.user.email}">
+    <p><span th:text="${post.user.email}"></span></p>
 </div>
-
-
 </body>
 </html>
