catching up branch with all the work completed on friday

--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -17,6 +17,8 @@
     <label for="body">Description:</label>
     <input id="body" th:field="*{body}" />
     <br />
+    <label for="email">Email:</label>
+    <input id="email" th:field="*{user.email}" />
     <input type="submit" />
 </form>
 
