--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -23,8 +23,8 @@
 <!--    <img th:src="${image.url}"/>-->
 
 <!--</div>-->
-<div th:each="post : ${post.user.email}">
-    <p><span th:text="${post.user.email}"></span></p>
-</div>
+<!--<div th:each="post : ${post.user.email}">-->
+<!--    <p><span th:text="${post.user.email}"></span></p>-->
+<!--</div>-->
 </body>
 </html>
