--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -19,7 +19,7 @@
                     <article class="tile is-child box">
                         <h1 class="title" th:text="${post.title}"></h1>
                         <p class="content" th:text="${post.body}"></p>
-<!--                        <p class="user" th:text="${post.user.email}"></p>-->
+                        <p class="user" th:text="${post.user.email}"></p>
 
                         <form method="get" th:action="@{'/posts/' + ${post.id} + '/update'}">
                             <input type="hidden" name="title" th:value="${post.title}">
@@ -38,9 +38,9 @@
                         <form th:action="@{'/posts/' + ${post.id} + '/showImg'}" th:method="GET">
                             <button>show img</button>
                         </form>
-                        <form th:action="@{'/posts/' + ${post.id} + '/showEmail'}" th:method="GET">
-                            <button>show email</button>
-                        </form>
+<!--                        <form th:action="@{'/posts/' + ${post.id} + '/showEmail'}" th:method="GET">-->
+<!--                            <button>show email</button>-->
+<!--                        </form>-->
                         <hr>
                         <form th:action="@{'/posts/' + ${post.id} + '/delete'}" method="POST">
                             <button class="button is-small is-danger is-outlined"><span class="icon is-small"><i class="fas fa-times"></i></span></button>
